timeServer/federated_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-server
spec:
  ports:
  - port: 80 # the port that this service should serve on
    # the container on each pod to connect to, can be a name
    # (e.g. 'www') or a number (e.g. 80)
    targetPort: 80
    protocol: TCP
  # just like the selector in the replication controller,
  # but this time it identifies the set of pods to load balance
  # traffic to.
  type: LoadBalancer
  selector:
    app: time-server
