timeServer/fedtime_tls_internal_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fedtime-tls
spec:
  ports:
  - port: 443 # the port that this service should serve on
    # the container on each pod to connect to, can be a name
    # (e.g. 'www') or a number (e.g. 80)
    targetPort: 443
    protocol: TCP
  # just like the selector in the replication controller,
  # but this time it identifies the set of pods to load balance
  # traffic to.
  selector:
    app: time-server-tls
